cabal-version:      2.4
name:               nkeys
version:            0.0.1.0
synopsis:           Nkeys ed25519 encoding for use with NATS

-- A longer description of the package.
-- description:
homepage:           https://github.com/autodidaddict/nkeys-hs

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENSE
author:             Kevin Hoffman
maintainer:         autodidaddict@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Cryptography
extra-source-files: CHANGELOG.md

library nkeys-lib
    exposed-modules:  Nats.Nkeys

    -- Modules included in this library but not exported.
    other-modules: Nats.Nkeys.Pairs, Nats.Nkeys.Codec, Nats.Nkeys.Crc

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      ed25519 >= 0.0.5.0,
                      bytestring  >= 0.9,
                      text,
                      base32 >= 0.4,                      
                      vector,
                      binary
    hs-source-dirs:   src
    default-language: Haskell2010

executable nkeys-exe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        nkeys-lib

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite nkeys-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          NkeysTest.hs
    build-depends:    base ^>=4.17.2.0,
                      HUnit ^>=1.6,
                      ed25519 >= 0.0.5.0,
                      nkeys-lib,
                      bytestring
